--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,7 @@
-.App {
+.App{
+/*   background-color: #0D7377;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23212121' stroke-width='68.2' stroke-opacity='0.11' %3E%3Ccircle fill='%230D7377' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23166f73' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%231c6b6e' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%2321676a' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23246366' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23275f62' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%232a5b5e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%232c5759' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%232e5455' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%232f5051' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23304c4d' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23314849' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23324445' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23324141' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23323d3d' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2332393a' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%23323636' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23323232' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover; */
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
